# FinancialAccleration

./: .gitignore
.nvim/svlangserver/: index.json  linter.vc
ALVEO_STUFF/: toplevel.sv
ALVEO_STUFF/alveo-u50-xdc_20210505/: alveo-u50-xdc.xdc  readme.txt
ALVEO_STUFF/test_vivado_proj/: alveo_test_1.xpr
API_module/src/: main.cpp
DE2_115_STUFF/: funky_v1.sv
DE2_115_STUFF/test_builder_v1/: test1_builder.asm.rpt  test1_builder.done  test1_builder.fit.rpt  test1_builder.fit.summary  test1_builder.flow.rpt  test1_builder.htm  test1_builder.jdi  test1_builder.map.rpt  test1_builder.map.summary  test1_builder.pin  test1_builder.qpf  test1_builder.qsf  test1_builder.qws  test1_builder.sof  test1_builder.sta.rpt  (+4 more)
NetworkingHardware/: AXIS_interface_v1.sv  RX_MAC_v1.sv  axis_xor_v1.sv  axis_xor_v1_tb.sv  funky_v1.sv  funky_v1_tb.sv  rmii_v1.sv
NetworkingSoftware/: .bashconfigs  listener  listener.cpp  listener2  listener2.cpp  listener3.cpp  sender2
OrderbookSoftware/: CMakeLists.txt
OrderbookSoftware/src/: exec  test.cpp
SocketTesting/: .bashconfigs  exec  listener3  main.cpp  sender  sender.cpp  sender2.cpp
Software/: aliases  exec  main.cpp  xor_reduction_test.cpp
Streamer/: CMakeLists.txt  Makefile  main.cpp
build_scripts/: .bashconfigs2
configs/: tmux_config
docs/: .$NiC.drawio.bkp  .$NiC.drawio.dtmp  ;  NiC.drawio  RX_MAC.drawio  archived_main.tex  drawing.circ  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  scratch.txt
testbenches/: RX_MAC_v1_tb.sv  cutthroughFilter_v1_tb.sv  order_book_v1_tb.sv  rmii_v1_tb.sv  template_v2_tb.sv
(+1811 files in other folders)
